--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <div class="row">
   <div class="col-lg-4">
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus at cupiditate, exercitationem quisquam culpa nam beatae dolores nemo nobis cumque expedita quod vero assumenda ratione nostrum, veniam debitis ut quis.</p>
+    <p>Lorem ipsum dolor sit TTAEAEIUSLLSLKKJSAISLALKSALK, consectetur adipisicing elit. Doloribus at cupiditate, exercitationem quisquam culpa nam beatae dolores nemo nobis cumque expedita quod vero assumenda ratione nostrum, veniam debitis ut quis.</p>
   </div>
   <div class="col-lg-4">
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo dicta quidem nihil vel voluptas fugit, reiciendis, ipsam officia hic, reprehenderit rem architecto quos iste vero amet! Nam incidunt rerum porro.</p>
